# TOREI-GAIN

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
